<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.grootclub.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.grootclub.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.grootclub.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_privacy_policy"
        android:name="com.example.grootclub.ui.PrivacyPolicy.PrivacyPolicyFragment"
        android:label="@string/privacy_policy"
        tools:layout="@layout/fragment_privacy_policy" />

    <fragment
        android:id="@+id/nav_terms_of_services"
        android:name="com.example.grootclub.ui.TermsOfServices.TermsOfServicesFragment"
        android:label="@string/terms_of_services"
        tools:layout="@layout/fragment_terms_of_services" />

</navigation>